appointment/src/objects/Chatter_Calendar_Prefs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Event_Color__c</fullName>
        <label>Event Color</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_Group__c</fullName>
        <label>Recent Group</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recent_View__c</fullName>
        <label>Recent View</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <label>Chatter Calendar Prefs</label>
</CustomObject>